// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSkipLink is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiButton euiButton--primary euiButton--small euiButton--fill euiScreenReaderOnly--showOnFocus euiSkipLink testClass1 testClass2 css-1methg-euiSkipLink"
  data-test-subj="test subject string"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Skip
    </span>
  </span>
</a>
`;

exports[`EuiSkipLink props onClick is rendered 1`] = `
<a
  class="euiButton euiButton--primary euiButton--small euiButton--fill euiScreenReaderOnly--showOnFocus euiSkipLink css-1methg-euiSkipLink"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiSkipLink props position absolute is rendered 1`] = `
<a
  class="euiButton euiButton--primary euiButton--small euiButton--fill euiScreenReaderOnly--showOnFocus euiSkipLink css-1gkoqp9-euiSkipLink-absolute"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiSkipLink props position fixed is rendered 1`] = `
<a
  class="euiButton euiButton--primary euiButton--small euiButton--fill euiScreenReaderOnly--showOnFocus euiSkipLink css-o3tocm-euiSkipLink-fixed"
  href="#somewhere"
  rel="noreferrer"
  tabindex="0"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiSkipLink props position static is rendered 1`] = `
<a
  class="euiButton euiButton--primary euiButton--small euiButton--fill euiScreenReaderOnly--showOnFocus euiSkipLink css-1methg-euiSkipLink"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiSkipLink props tabIndex is rendered 1`] = `
<a
  class="euiButton euiButton--primary euiButton--small euiButton--fill euiScreenReaderOnly--showOnFocus euiSkipLink css-1methg-euiSkipLink"
  href="#somewhere"
  rel="noreferrer"
  tabindex="-1"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;
